PhaseCFG::insert_anti_dependences asserts with "no loads"

XMLWordPrintable

    • 24
    • b20

      After JDK-8333258, PhaseCFG::insert_anti_dependences asserts with "no loads" when running applications/ctw/modules/java_base_2.java

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/workspace/open/src/hotspot/share/opto/gcm.cpp:772), pid=2897021, tid=2897036
      # assert(!use_mem_state->needs_anti_dependence_check()) failed: no loads
      #
      # JRE version: Java(TM) SE Runtime Environment (24.0+19) (fastdebug build 24-ea+19-2202)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 24-ea+19-2202, mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0xdaead4] PhaseCFG::insert_anti_dependences(Block*, Node*, bool)+0xa54


      Current CompileTask:
      C2:64324 10896 b jdk.internal.misc.Unsafe::writebackMemory (58 bytes)

      Stack: [0x00007f91e99fb000,0x00007f91e9afb000], sp=0x00007f91e9af6690, free space=1005k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xdaead4] PhaseCFG::insert_anti_dependences(Block*, Node*, bool)+0xa54 (gcm.cpp:772)
      V [libjvm.so+0xdb637a] PhaseCFG::schedule_late(VectorSet&, Node_Stack&)+0x9ea (gcm.cpp:1517)
      V [libjvm.so+0xdb6cef] PhaseCFG::global_code_motion()+0x3ef (gcm.cpp:1628)
      V [libjvm.so+0xdb9af1] PhaseCFG::do_global_code_motion()+0x51 (gcm.cpp:1751)
      V [libjvm.so+0xa2d2a4] Compile::Code_Gen()+0x2a4 (compile.cpp:2950)
      V [libjvm.so+0xa30190] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1c70 (compile.cpp:885)
      V [libjvm.so+0x878be5] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1d5 (c2compiler.cpp:142)
      V [libjvm.so+0xa3bda8] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x928 (compileBroker.cpp:2303)
      V [libjvm.so+0xa3ca38] CompileBroker::compiler_thread_loop()+0x478 (compileBroker.cpp:1961)
      V [libjvm.so+0xeedcbc] JavaThread::thread_main_inner()+0xcc (javaThread.cpp:759)
      V [libjvm.so+0x1813fa6] Thread::call_run()+0xb6 (thread.cpp:234)
      V [libjvm.so+0x14f9078] thread_native_entry(Thread*)+0x128 (os_linux.cpp:858)

            Assignee:
            Igor Veresov
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: