8341831: PhaseCFG::insert_anti_dependences asserts with "no loads" Summary: Relax assert to deal with CacheWB nodes